[gd_scene load_steps=9 format=3 uid="uid://cvfb6efgoeka3"]

[ext_resource type="Script" uid="uid://dfkuta1k48vd6" path="res://scripts/apple.gd" id="1_n78qv"]
[ext_resource type="Texture2D" uid="uid://dbwgdlgn0tdbu" path="res://assests/characters/item/apple.png" id="2_donlb"]

[sub_resource type="Animation" id="Animation_donlb"]
resource_name = "apple_hover"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.033333335, 0.56666666, 1.0333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 2.9999995), Vector2(0, 5), Vector2(0, 2.9999995)]
}

[sub_resource type="Animation" id="Animation_85po1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 2.9999995)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5274038, 2.5274038)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../apple_shadow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("..:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0177t"]
resource_name = "apple_taken"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.033333335, 0.06666667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 3.1428566), Vector2(0, -6.977)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.06666667, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.5274038, 2.5274038), Vector2(0.19, 0.19)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.06666667, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../apple_shadow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.06666667, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_gmvkn"]
resource_name = "apple_spawn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.33333334),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.337, 0.337), Vector2(2.5274038, 2.5274038)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.033333335),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.16666667, 0.33333334),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -0.2304287), Vector2(0, -7.035), Vector2(0, 6.86), Vector2(0, -0.2304287)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../apple_shadow:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(3.3635848, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0177t"]
_data = {
&"RESET": SubResource("Animation_85po1"),
&"apple_hover": SubResource("Animation_donlb"),
&"apple_spawn": SubResource("Animation_gmvkn"),
&"apple_taken": SubResource("Animation_0177t")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_n78qv"]
radius = 31.016125

[node name="Apple" type="Area2D"]
script = ExtResource("1_n78qv")

[node name="apple_image" type="Sprite2D" parent="."]
z_index = 6
position = Vector2(0, 2.9999995)
scale = Vector2(2.5274038, 2.5274038)
texture = ExtResource("2_donlb")

[node name="animation" type="AnimationPlayer" parent="apple_image"]
libraries = {
&"": SubResource("AnimationLibrary_0177t")
}
autoplay = "apple_hover"

[node name="apple_shadow" type="Sprite2D" parent="."]
modulate = Color(0, 0, 0, 1)
self_modulate = Color(1, 1, 1, 0.24705882)
z_index = 6
position = Vector2(1.009742e-28, 27)
scale = Vector2(2.0709999, 0.34800023)
texture = ExtResource("2_donlb")

[node name="collect" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_n78qv")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="apple_image/animation" to="." method="_on_animation_animation_finished"]
